# sitio-web

./: .gitignore  README.md
backend/: Cargo.toml  idk.http
backend/src/: main.rs
backend/src/db/: connection.rs
backend/src/handlers/: equipo.rs  img_donation.rs  logro.rs  mod.rs  news.rs  noticia.rs
backend/src/models/: equipo.rs  img_donation.rs  logro.rs  mod.rs  news.rs  noticia.rs  token.rs  user.rs
backend/src/repositories/: equipo.rs  img_donation.rs  logro.rs  mod.rs  news.rs  noticia.rs  user.rs
backend/src/routes/: mod.rs  news.rs
backend/src/services/: news.rs
backend/src/utils/: date_spanish.rs  equipo.rs  image.rs  logro.rs  mod.rs  noticia.rs  password.rs  read_json.rs  token.rs  write_json.rs
frontend/: package-lock.json
frontend/public/img_donaciones/: 2.avif  9.avif
frontend/src/assets/: banner_seno.avif  logo_seno.avif
frontend/src/assets/img_donaciones/: 0.avif  1.avif  3.avif  4.avif  5.avif  6.avif  7.avif  8.avif
frontend/src/assets/img_equipo/: cris.avif  vero.avif
frontend/src/assets/img_noticias/: 1.avif  7.avif
frontend/src/components/: Footer.astro  Header.astro
frontend/src/components/Common/: SubNav.astro  TituloPag.astro  Ubicacion.astro
frontend/src/components/Footer/: Contacto.astro  FooterFin.astro  FooterInfo.astro
frontend/src/data/: navigationDonaciones.ts  navigationInformacionUtil.ts  navigationMain.ts  navigationQuienesSomos.ts  navigationSobreNosotros.ts
frontend/src/layouts/: Layout.astro  LayoutLogin.astro
frontend/src/pages/: index.astro
frontend/src/style/: general.css
(+70 files in other folders)
