[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1.52.4", features = ["full"] }
tower-http = { version = "0.7.0", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.45", features = ["serde"] }
dotenvy = "0.15"
image = { version = "0.25", features = ["avif"] }
argon2 = { version = "0.5", features = ["std"] }
password-hash = { version = "0.6.1", features = ["getrandom"] }
jsonwebtoken = "10.4.0"
rand = "0.10.2"
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.9.0", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "chrono",
    "uuid",
] }
